# MediaConvector

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260417_0001_initial_schema.py  20260418_0002_add_music_cache_fields.py  20260418_0003_add_music_source_states.py  20260418_0004_add_music_acquisition_backend.py  20260418_0005_remove_music_schema.py  20260418_0006_add_tiktok_resource_type_and_photos.py
app/: __init__.py  bootstrap.py  config.py  main.py  messages.py
app/application/services/: __init__.py  cache_service.py  dedup_service.py  delivery_service.py  health_service.py  media_pipeline_service.py  metrics_service.py  music_acquisition_service.py  music_pipeline_service.py  music_search_service.py  music_source_health_service.py  process_message_service.py  rate_limit_service.py  track_pipeline_service.py  track_trigger_service.py  user_request_guard_service.py
app/domain/entities/: __init__.py  cache_entry.py  download_job.py  media_request.py  media_result.py  music_download_artifact.py  music_search_query.py  music_source_state.py  music_track.py  normalized_resource.py  source_media_artifact.py  track_cache_entry.py  track_query.py  track_search_candidate.py  visual_media_entry.py
app/domain/enums/: __init__.py  cache_status.py  delivery_status.py  job_status.py  music_failure_code.py  platform.py  (+2 more)
app/tests/: conftest.py  fakes.py
app/workers/: __init__.py  cleanup_worker.py  health_worker.py
deployment/systemd/: tiktok-downloader-bot.service
scripts/: run_migrations.sh  setup_ubuntu.sh
(+99 files in other folders)
