[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiktok-telegram-downloader-bot"
version = "1.0.0"
description = "Production-grade Telegram bot for multi-source public media URL downloads."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "aiogram>=3.4.1,<4.0.0",
  "alembic>=1.13.1,<2.0.0",
  "aiosqlite>=0.19.0,<1.0.0",
  "httpx>=0.25.2,<1.0.0",
  "pydantic>=2.6.4,<3.0.0",
  "pydantic-settings>=2.2.1,<3.0.0",
  "SQLAlchemy>=2.0.29,<3.0.0",
  "gallery-dl",
  "yt-dlp>=2024.8.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.5,<1.0.0",
]

[project.scripts]
tiktok-bot = "app.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*", "alembic*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
asyncio_mode = "auto"
